--- a/__data/u08m-match-report.html
+++ b/__data/u08m-match-report.html
@@ -1,1 +1,13 @@
-<p>Coming soon...</p>
+<script type="text/javascript">
+  if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
+  if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
+</script>
+
+<div id="r01" style="display: none;">
+  <h3>Round 1</h3>
+  <p>Coming soon...</p>
+</div>
+<div id="r02" style="display: none;">
+  <h3>Round 2</h3>
+  <p>Coming soon...</p>
+</div>
