--- a/__data/u08m-match-report.html
+++ b/__data/u08m-match-report.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
   if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
+  document.getElementById("r01").style.display = "block";
 </script>
 
 <div id="r01" style="display: none;">
