--- a/__data/u08m-match-report.html
+++ b/__data/u08m-match-report.html
@@ -2,6 +2,7 @@
   if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
   if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
   document.getElementById("r01").style.display = "block";
+  console.log('wtf', window.location.search)
 </script>
 
 <div id="r01" style="display: none;">
