--- a/__data/u08m-match-report.html
+++ b/__data/u08m-match-report.html
@@ -1,7 +1,9 @@
 <script type="text/javascript">
-  if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
-  if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
-  document.getElementById("r01").style.display = "block";
+  // if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
+  // if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
+  // document.getElementById("r01").style.display = "block";
+  $("#r01").css("display","block");
+  console.log($("#r01"))
   console.log('wtf', window.location.search)
 </script>
 
