--- a/__data/u08m-match-report.html
+++ b/__data/u08m-match-report.html
@@ -2,8 +2,8 @@
   // if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
   // if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
   // document.getElementById("r01").style.display = "block";
-  $("#r01").css("display","block");
-  console.log($("#r01"))
+  jQuery("#r01").css("display","block");
+  console.log(jQuery("#r01"))
   console.log('wtf', window.location.search)
 </script>
 
