--- a/__data/u08m-match-report.html
+++ b/__data/u08m-match-report.html
@@ -2,7 +2,7 @@
   // if (window.location.search.includes("id=r01")) document.getElementById("r01").style.display = "block";
   // if (window.location.search.includes("id=r02")) document.getElementById("r02").style.display = "block";
   // document.getElementById("r01").style.display = "block";
-  jQuery("#r01").css("display","block");
+  jQuery("#r01").show();
   console.log(jQuery("#r01"))
   console.log('wtf', window.location.search)
 </script>
