feat: manually add html

--- a/__data/teams-u08m-match-report.html
+++ b/__data/teams-u08m-match-report.html
@@ -1,20 +1,42 @@
 <script type="text/javascript">
-  jQuery(document).ready(function() {	
-    if (window.location.search.includes("id=r02")) jQuery("#r02").show();
-    else jQuery("#not-found").show();
-  })
+  jQuery(document).ready(function () {
+    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else jQuery('#not-found').show();
+  });
 </script>
-<div id="r02" style="display: none;">
-  <h3>Round 2</h3>
-<div>&nbsp;</div>
-<div>
-<div id="x_ydpbe98ef3byiv8007619600ms-outlook-mobile-signature">
-<p class="x_MsoNormal">&nbsp;</p>
+<div id="r01" style="display: none">
+  <h3>Round 1</h3>
+  <p>Dear Parents and Supporters,</p>
+  <p>
+    Bayswater Junior Football Team Under 8s kicked off their first game of the season with an impressive display of teamwork, determination and skill. It was
+    great to see all the players enjoying their footy and giving their all on the field. The game took place at Lewis Park, and our young Bayswater team played
+    against Noble Park who all played in great spirits.
+  </p>
+  <p>
+    The team with Dan had a great start to the game, with Frankie and Hattie linking up well and moving the ball forward. Despite Alyan returning for his first
+    training session just last week, he took to the field seamlessly and found plenty of the ball. There were plenty of great moments from all the players which
+    had their parents sharing plenty of laughs and cheers throughout the game.
+  </p>
+  <p>
+    Scott's players also had a cracking first game out, he was impressed with the great sportsmanship shown and delighted to see all the players having fun.
+    Jack got the crowd cheering with the first goal of the year and Lewis showed great awareness with 3 awesome smothers. Was great to see the team work to get
+    Logan involved passing the ball around to ensure everyone got a kick.
+  </p>
+  <p>
+    It was fantastic to see the team handballing and bringing their teammates into the game across both fields. As a team, we are continuing to develop our
+    fundamental skills and our defence, it is clear that our players are taking on board the feedback from their coaches and implementing it on the field.
+  </p>
+  <p>
+    Overall, it was an excellent team effort, and we are proud of the progress our players are making in both their individual skills and team play. We are
+    excited to see how they continue to develop throughout the season.
+  </p>
+  <p>
+    Thank you also to our trainer James and our team managers Tim and Clare for preparing us well for the first game and to all parents and supporters who came
+    out to cheer on the team. Your continued support is greatly appreciated, and we look forward to seeing you all at our next game.
+  </p>
+  <p>Kind regards,<br />Dan and Scott</p>
 </div>
-<p class="x_MsoNormal">&nbsp;</p>
-</div>
-</div>
-<div id="not-found" style="display: none;">
+<div id="not-found" style="display: none">
   <h3>Not Found</h3>
-<p>Sorry, we couldn't find a matching match report.</p>
+  <p>Sorry, we couldn't find a matching match report.</p>
 </div>
