--- a/__data/teams-u09m-match-report.html
+++ b/__data/teams-u09m-match-report.html
@@ -1,9 +1,21 @@
 <script type="text/javascript">
-  jQuery(document).ready(function() {	
-    jQuery("#not-found").show();
-  })
+  jQuery(document).ready(function () {
+    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else jQuery('#not-found').show();
+  });
 </script>
-<div id="not-found" style="display: none;">
+<div id="r01" style="display: none">
+  <h3>Round 1</h3>
+  <p>Great games today to all the boys.</p>
+  <p>On a glorious Sunday morning in down town Croydon, the boys were pumped and ready to play.</p>
+  <p>Our defense was strong, following the basics of getting in front, arms up and applying pressure.</p>
+  <p>The midfield was amazing at getting the ball and boosting it to the forwards.</p>
+  <p>The forwards really had some fun kicking a few 'sausage rolls' and getting around each other to celebrate.</p>
+  <p>To think where the skills have accelerated from this time last year to now is absolutely amazing. The coaching team could not be prouder.</p>
+  <p>Thankyou to all who came down to watch, help out and support the mighty Baysy Under 9 family.</p>
+  <p>See you all Friday night 💚💛💚💛</p>
+</div>
+<div id="not-found" style="display: none">
   <h3>Not Found</h3>
-<p>Sorry, we couldn't find a matching match report.</p>
+  <p>Sorry, we couldn't find a matching match report.</p>
 </div>
