--- a/__data/teams-u08m-match-report.html
+++ b/__data/teams-u08m-match-report.html
@@ -1,42 +1,33 @@
 <script type="text/javascript">
-  jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
-    else jQuery('#not-found').show();
-  });
+  jQuery(document).ready(function() {	
+    if (window.location.search.includes("id=r01")) jQuery("#r01").show();
+    else if (window.location.search.includes("id=r02")) jQuery("#r02").show();
+    else jQuery("#not-found").show();
+  })
 </script>
-<div id="r01" style="display: none">
+<div id="r01" style="display: none;">
   <h3>Round 1</h3>
-  <p>Dear Parents and Supporters,</p>
-  <p>
-    Bayswater Junior Football Team Under 8s kicked off their first game of the season with an impressive display of teamwork, determination and skill. It was
-    great to see all the players enjoying their footy and giving their all on the field. The game took place at Lewis Park, and our young Bayswater team played
-    against Noble Park who all played in great spirits.
-  </p>
-  <p>
-    The team with Dan had a great start to the game, with Frankie and Hattie linking up well and moving the ball forward. Despite Alyan returning for his first
-    training session just last week, he took to the field seamlessly and found plenty of the ball. There were plenty of great moments from all the players which
-    had their parents sharing plenty of laughs and cheers throughout the game.
-  </p>
-  <p>
-    Scott's players also had a cracking first game out, he was impressed with the great sportsmanship shown and delighted to see all the players having fun.
-    Jack got the crowd cheering with the first goal of the year and Lewis showed great awareness with 3 awesome smothers. Was great to see the team work to get
-    Logan involved passing the ball around to ensure everyone got a kick.
-  </p>
-  <p>
-    It was fantastic to see the team handballing and bringing their teammates into the game across both fields. As a team, we are continuing to develop our
-    fundamental skills and our defence, it is clear that our players are taking on board the feedback from their coaches and implementing it on the field.
-  </p>
-  <p>
-    Overall, it was an excellent team effort, and we are proud of the progress our players are making in both their individual skills and team play. We are
-    excited to see how they continue to develop throughout the season.
-  </p>
-  <p>
-    Thank you also to our trainer James and our team managers Tim and Clare for preparing us well for the first game and to all parents and supporters who came
-    out to cheer on the team. Your continued support is greatly appreciated, and we look forward to seeing you all at our next game.
-  </p>
-  <p>Kind regards,<br />Dan and Scott</p>
+<p>Dear Parents and Supporters,</p>
+<p>Bayswater Junior Football Team Under 8s kicked off their first game of the season with an impressive display of teamwork, determination and skill. It was great to see all the players enjoying their footy and giving their all on the field. The game took place at Lewis Park, and our young Bayswater team played against Noble Park who all played in great spirits.</p>
+<p>The team with Dan had a great start to the game, with Frankie and Hattie linking up well and moving the ball forward. Despite Alyan returning for his first training session just last week, he took to the field seamlessly and found plenty of the ball. There were plenty of great moments from all the players which had their parents sharing plenty of laughs and cheers throughout the game.</p>
+<p>Scott's players also had a cracking first game out, he was impressed with the great sportsmanship shown and delighted to see all the players having fun. Jack got the crowd cheering with the first goal of the year and Lewis showed great awareness with 3 awesome smothers. Was great to see the team work to get Logan involved passing the ball around to ensure everyone got a kick.</p>
+<p>It was fantastic to see the team handballing and bringing their teammates into the game across both fields. As a team, we are continuing to develop our fundamental skills and our defence, it is clear that our players are taking on board the feedback from their coaches and implementing it on the field.</p>
+<p>Overall, it was an excellent team effort, and we are proud of the progress our players are making in both their individual skills and team play. We are excited to see how they continue to develop throughout the season.</p>
+<p>Thank you also to our trainer James and our team managers Tim and Clare for preparing us well for the first game and to all parents and supporters who came out to cheer on the team. Your continued support is greatly appreciated, and we look forward to seeing you all at our next game.</p>
+<p>Kind regards,<br>Dan and Scott</p>
 </div>
-<div id="not-found" style="display: none">
+<div id="r02" style="display: none;">
+  <h3>Round 2</h3>
+<p>Well... it was wet wet wet on Sunday!<br>Big thanks to all the parents for getting their kids up and going in the middle of school holidays when the weather was cold, dark and wet.</p>
+<p>Despite the cold and wet start, everyone was enthusiastic and excited to play.</p>
+<p>Game 1<br>Started well with some good work in the middle of the ground by Jett and Madden working well in tandem to get the ball forward.&nbsp;<br>Harvey was dynamic in the forward line scoring his first goal for the season, also working well with Alyan to score goals as well.<br>In the last quarter Frankie and Cohen were excellent in defence, rebounding through Flynn in particular through the middle to get it into the forward line.</p>
+<p>Game 2<br>Patrick, Hattie and Pheonix were enormous all day with their continual effort around the ground and their will to be involved in the contest. Xavier was good up forward even managing to high 5 an Endevour Hills player after kicking a goal.<br>Max gave an exceptional effort in the 2nd half after some first half doubts.</p>
+<p><br>Highlights for the team were moving the ball well, great talk and using each other really well to move the ball forward. Awesome team effort despite the conditions.</p>
+<p>Both games were competed in tremendous spirit given the conditions and every Baswater player was very excited to play for the opposition given we had 17 and they had 9 across the 2 fields.&nbsp;</p>
+<p>Great game by all</p>
+<p>Bring on next week!</p>
+</div>
+<div id="not-found" style="display: none;">
   <h3>Not Found</h3>
-  <p>Sorry, we couldn't find a matching match report.</p>
+<p>Sorry, we couldn't find a matching match report.</p>
 </div>
