--- a/__data/teams-u08m.html
+++ b/__data/teams-u08m.html
@@ -1,10 +1,8 @@
 <div class="col-container">
   <div class="col1">
-    <h3 style="margin-top: 10px">CONTACTS</h3>
+    <h3 style="margin-top: 10px;">CONTACTS</h3>
     <ul>
-      <li>
-        <b>Head Coach: </b><span class="nowrap">Daniel Fitzpatrick - <a href="tel:0428 115 998">0428 115 998</a></span>
-      </li>
+      <li><b>Head Coach: </b><span class="nowrap">Daniel Fitzpatrick - <a href="tel:0428 115 998">0428 115 998</a></span></li>
       <li><b>Assistant Coach: </b><span class="nowrap">Scott Jolly</span></li>
       <li><b>Team Manager: </b><span class="nowrap">Clare Griffin</span></li>
       <li><b>Team Manager: </b><span class="nowrap">Tim Groenewegen</span></li>
@@ -12,27 +10,22 @@
     </ul>
   </div>
   <div class="col2">
-    <div style="padding-top: 1em">
-      <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">TBD</p>
+    <div style="padding-top: 1em;">
+      <h4 style="margin-bottom: 5px;">Training Times</h4>
+      <p style="margin: 0;">Friday</p>
     </div>
-    <div style="padding-top: 0.5em">
-      <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616985&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
-      </p>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616985&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
-      </p>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616985&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
-      </p>
+    <div style="padding-top: .5em;">
+      <h4 style="margin-bottom: 5px;">Season Information</h4>
+      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616985&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a></p>
+      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616985&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a></p>
+      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616985&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a></p>
     </div>
   </div>
 </div>
 <div>
-  <h3 style="margin-top: 10px">MATCH REPORTS</h3>
+  <h3 style="margin-top: 10px;">MATCH REPORTS</h3>
   <ul>
     <li><a href="/u08m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
+    <li><a href="/u08m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
   </ul>
 </div>
