--- a/__data/teams-u14b-match-report.html
+++ b/__data/teams-u14b-match-report.html
@@ -1,24 +1,25 @@
 <script type="text/javascript">
-  jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
-    else jQuery('#not-found').show();
-  });
+  jQuery(document).ready(function() {	
+    if (window.location.search.includes("id=r01")) jQuery("#r01").show();
+    else if (window.location.search.includes("id=r02")) jQuery("#r02").show();
+    else jQuery("#not-found").show();
+  })
 </script>
-<div id="r01" style="display: none">
+<div id="r01" style="display: none;">
   <h3>Round 1</h3>
-  <p>
-    The season started off with an exciting time for Mateo, who played his 50th game for the club. North Ringwood got off to a fast start, kicking 5 goals in
-    the first quarter.
-  </p>
-  <p>After regrouping at the first break, we identified that our pressure wasn't at the level that it needed to be.</p>
-  <p>Led by the midfield, the team lifted and as such limited North Ringwood's scoring for the remainder of the game, while we kicked a few goals ourselves.</p>
-  <p>
-    As was seen in Sunday's game, we have set a standard, which moving forward we need to bring week in week out. If we can continue to 'bring the heat' we will
-    have an enjoyable season.
-  </p>
-  <p>Luke Penn</p>
+<p>The season started off with an exciting time for Mateo, who played his 50th game for the club. North Ringwood got off to a fast start, kicking 5 goals in the first quarter.</p>
+<p>After regrouping at the first break, we identified that our pressure wasn't at the level that it needed to be.</p>
+<p>Led by the midfield, the team lifted and as such limited North Ringwood's scoring for the remainder of the game, while we kicked a few goals ourselves.</p>
+<p>As was seen in Sunday's game, we have set a standard, which moving forward we need to bring week in week out. If we can continue to 'bring the heat' we will have an enjoyable season.</p>
+<p>Luke Penn</p>
 </div>
-<div id="not-found" style="display: none">
+<div id="r02" style="display: none;">
+  <h3>Round 2</h3>
+<p>Prior to the game, I explained to the boys that the game wasn't going to be pretty given the weather conditions. I asked them to bring effort and get their hands dirty. We started the game off really well with all players contributing, putting their head down and getting to work. As the game went on, we tried our very best but were unfortunately out played against a better outfit on the day. With players coming back, I expect us to get better, and if we continue to get to training and work hard a win will be around the corner. Special mentions to Xavier who run hard all day, providing us with lots of spark and hardness around the packs, Jordan and Zakiya in the ruck, Axel at full back and to our two new players Angus and Shevinn who looked at home on the footy field. &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<p>Regards,</p>
+<p>Luke Penn<br>Under 14's Head Coach</p>
+</div>
+<div id="not-found" style="display: none;">
   <h3>Not Found</h3>
-  <p>Sorry, we couldn't find a matching match report.</p>
+<p>Sorry, we couldn't find a matching match report.</p>
 </div>
