--- a/__data/teams-u14g-match-report.html
+++ b/__data/teams-u14g-match-report.html
@@ -1,9 +1,19 @@
 <script type="text/javascript">
-  jQuery(document).ready(function () {
-    jQuery('#not-found').show();
-  });
+  jQuery(document).ready(function() {	
+    if (window.location.search.includes("id=r02")) jQuery("#r02").show();
+    else jQuery("#not-found").show();
+  })
 </script>
-<div id="not-found" style="display: none">
+<div id="r02" style="display: none;">
+  <h3>Round 2</h3>
+<p>It wasn&rsquo;t a great day for the under 14 girls in round two. &nbsp;Playing against SBL away, we were outplayed for most of the game by a team that was competing harder at more stoppages and for longer periods in the game. &nbsp;As the match went on, it was clear that we were a younger team, missing a couple of top age girls to help balance the contest. &nbsp;A tough loss 8 &ndash; 71. &nbsp;&nbsp;</p>
+<p>Whilst we are focusing on improving our skills at training, it is our game sense and awareness of what to do and where to be that we also need to work on. &nbsp;Such simple things as rushing a behind, rather than allowing the opportunity for the other team to kick a goal, or running back in defence and staying on our opposition player. &nbsp;It&rsquo;s the little things that can make a big difference.&nbsp;</p>
+<p>A tough game played by Shaylee, intercepting many SBL forward movements. &nbsp;Lily and Grace worked hard in the ruck and Jess was lively around the stoppages being quick enough to break away in our forward line to kick our only goal in the third quarter. &nbsp;</p>
+<p>A lot more footy to be taught. &nbsp;The coaching team will work hard on teaching the skills and game knowledge to give the girls the best opportunity to improve. &nbsp;However, the correct mindset brought to each and every training session and game is up to every individual on the team. &nbsp; &nbsp;&nbsp;</p>
+<p>Thank you,</p>
+<p>Kevin Maniscalchi</p>
+</div>
+<div id="not-found" style="display: none;">
   <h3>Not Found</h3>
-  <p>Sorry, we couldn't find a matching match report.</p>
+<p>Sorry, we couldn't find a matching match report.</p>
 </div>
