--- a/__data/teams-u16g-match-report.html
+++ b/__data/teams-u16g-match-report.html
@@ -1,34 +1,22 @@
 <script type="text/javascript">
-  jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
-    else jQuery('#not-found').show();
-  });
+  jQuery(document).ready(function() {	
+    if (window.location.search.includes("id=r01")) jQuery("#r01").show();
+    else jQuery("#not-found").show();
+  })
 </script>
-<div id="r01" style="display: none">
+<div id="r01" style="display: none;">
   <h3>Round 1</h3>
-  <p>Today we played Boronia at their ground.</p>
-  <p>Unfortunately we are a little low on numbers and with a couple of girls unable to play so we only had 11 to take the field.</p>
-  <p>Boronia sent a few players over to even up the numbers.</p>
-  <p>
-    We had a really good first quarter. Our effort level was high, our talk was good and we made a lot of effort to get in all the right spots to give us the
-    best opportunity to drive the ball forward. We took a good lead at quarter time.
-  </p>
-  <p>
-    The second quarter was much more even. The effort level was still really good but we just weren&rsquo;t picking up their players enough so something we
-    would work on in the third quarter.
-  </p>
-  <p>
-    Unfortunately we lost 2 players at half time so we had to play 2 players short which was just too hard. They were still trying very hard but with 2 extra
-    players on the field, Boronia were able to kick goals.
-  </p>
-  <p>
-    The last quarter got even worse for our numbers with another player unable to play so now we were 3 players short for the last quarter. Boronia came home
-    strong and it just hurt us too much having 3 less players on the field.
-  </p>
-  <p>We ended up losing 62-38. The girls didn&rsquo;t stop trying, which was very pleasing.</p>
-  <p>Goals. Liv Haun 2, Haylee 2, Ella 2<br />Best. Mathilda, Liv Haun, Ella, Marley, Milly, Saanvi</p>
+<p>Today we played Boronia at their ground.</p>
+<p>Unfortunately we are a little low on numbers and with a couple of girls unable to play so we only had 11 to take the field.</p>
+<p>Boronia sent a few players over to even up the numbers.</p>
+<p>We had a really good first quarter. Our effort level was high, our talk was good and we made a lot of effort to get in all the right spots to give us the best opportunity to drive the ball forward. We took a good lead at quarter time.</p>
+<p>The second quarter was much more even. The effort level was still really good but we just weren&rsquo;t picking up their players enough so something we would work on in the third quarter.</p>
+<p>Unfortunately we lost 2 players at half time so we had to play 2 players short which was just too hard. They were still trying very hard but with 2 extra players on the field, Boronia were able to kick goals.</p>
+<p>The last quarter got even worse for our numbers with another player unable to play so now we were 3 players short for the last quarter. Boronia came home strong and it just hurt us too much having 3 less players on the field.</p>
+<p>We ended up losing 62-38. The girls didn&rsquo;t stop trying, which was very pleasing.</p>
+<p>Goals. Liv Haun 2, Haylee 2, Ella 2<br>Best. Mathilda, Liv Haun, Ella, Marley, Milly, Saanvi</p>
 </div>
-<div id="not-found" style="display: none">
+<div id="not-found" style="display: none;">
   <h3>Not Found</h3>
-  <p>Sorry, we couldn't find a matching match report.</p>
+<p>Sorry, we couldn't find a matching match report.</p>
 </div>
