--- a/__data/teams-u17gold-match-report.html
+++ b/__data/teams-u17gold-match-report.html
@@ -1,9 +1,27 @@
 <script type="text/javascript">
-  jQuery(document).ready(function () {
-    jQuery('#not-found').show();
-  });
+  jQuery(document).ready(function() {	
+    if (window.location.search.includes("id=r01")) jQuery("#r01").show();
+    else if (window.location.search.includes("id=r02")) jQuery("#r02").show();
+    else jQuery("#not-found").show();
+  })
 </script>
-<div id="not-found" style="display: none">
+<div id="r01" style="display: none;">
+  <h3>Round 1</h3>
+<p>Our first game of the season saw us play Montrose who had beaten us convingly on two previous occasions, the second occasion being by more than 80 points.</p>
+<p>After a slowish start, the boys really kicked into gear late into the second quarter. Some of the new guys made their presence felt with Harry Siddle giving us some good drive off the half backline, Jonno who carved up the opposition on the wing all day and Angus who chimed in with a lazy 5 goals. Both Argy and Chris (who are not only new to the club but new to footy overall) quickly showed us why they will be an important part of how we go this season. Argy's body work and attack on the ball in the backline was brilliant and Chris showed some great signs up forward with taking a few nice grabs and providing some good forward pressure.</p>
+<p>The backline stood up to the challenges Montrose threw at them all day as well and were led well by Rhys, Aaron and Rohan.</p>
+<p>The 'Usual Suspects' (Alex, Nathan, Sam and Tom) led the team beautifully and ran hard all game and provided some great drive all around the ground. Kai was a good presence for us in the half forward line and got a lot of the ball today.</p>
+<p>The boys were physical throughout the whole game and used their bodies well in the contests. A prime example was when Connor put the afterburners on and ran down a ball carrier and tackled him with a bone-jarring hit that saw him rewarded for his great tackle with a free kick. It's these kinds of things that helped set the tempo for the second half and once the boys got a sniff, they pressed even harder.</p>
+<p>Unfortunately, the boys' efforts came up short and we went down fighting by 29 points. Both the opposition coaches and the umpires commented on the standard of the game from both teams and the spirit it was played in, so both teams are to be commended. On to our first home game for the season next week against Norwood.</p>
+</div>
+<div id="r02" style="display: none;">
+  <h3>Round 2</h3>
+<p>The weather was terrible and the conditions were blustery for most of the game today and it was all about whoever wanted the ball and was first for the ball would win this competition. The boys looked a bit lost in the first quarter and it quickly reflected on the scoreboard with Norwood grouping well together and using the strong breeze to kick 8 goals in the first quarter.&nbsp;</p>
+<p>The second quarter was a similar story aside from a few of the boys who started to step up to support the work done in the middle. Xavier and Rohan were asked to take on the ruck duties and they contested hard all day with both boys working in unison switching between Centre Half Back and Ruck. I thank both of these boys for playing out of position and selflessly doing what they could to help the team.</p>
+<p>The third quarter saw things change for the better and the boys started to lift. The pressure ramped up and the boys 'wanted' it more than the first half and it showed with their efforts, body work and tackling. James slotted a great goal after working hard and earning a free kick, Harry Bolger provided a good option at Centre Half Forward and started to get into the game more, Kobe led better and chased harder and Mason's pressure on the ball carrier increased with him doing some good tackling as well.</p>
+<p>Next week against Blackburn will be a tough game. We need to come on the day ready to play, learn how to manage distractions better and communicate better in order to have some good results moving forward. Time to refocus and get ready for training on Tuesday night. It'll be a big week of preparation but we're more than ready for it!</p>
+</div>
+<div id="not-found" style="display: none;">
   <h3>Not Found</h3>
-  <p>Sorry, we couldn't find a matching match report.</p>
+<p>Sorry, we couldn't find a matching match report.</p>
 </div>
