--- a/__data/teams-u10m.html
+++ b/__data/teams-u10m.html
@@ -1,10 +1,8 @@
 <div class="col-container">
   <div class="col1">
-    <h3 style="margin-top: 10px">CONTACTS</h3>
+    <h3 style="margin-top: 10px;">CONTACTS</h3>
     <ul>
-      <li>
-        <b>Head Coach: </b><span class="nowrap">Shaun Jones - <a href="tel:0408 139 921">0408 139 921</a></span>
-      </li>
+      <li><b>Head Coach: </b><span class="nowrap">Shaun Jones - <a href="tel:0408 139 921">0408 139 921</a></span></li>
       <li><b>Assistant Coach: </b><span class="nowrap">Daniel Fitzpatrick</span></li>
       <li><b>Assistant Coach: </b><span class="nowrap">Mark Randall</span></li>
       <li><b>Team Manager: </b><span class="nowrap">Jess Randall</span></li>
@@ -14,25 +12,21 @@
     </ul>
   </div>
   <div class="col2">
-    <div style="padding-top: 1em">
-      <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">TBD</p>
+    <div style="padding-top: 1em;">
+      <h4 style="margin-bottom: 5px;">Training Times</h4>
+      <p style="margin: 0;">Friday 5:30pm - 6:30pm</p>
     </div>
-    <div style="padding-top: 0.5em">
-      <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616999&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
-      </p>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616999&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
-      </p>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616999&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
-      </p>
+    <div style="padding-top: .5em;">
+      <h4 style="margin-bottom: 5px;">Season Information</h4>
+      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616999&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a></p>
+      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616999&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a></p>
+      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616999&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a></p>
     </div>
   </div>
 </div>
 <div>
-  <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <p>Coming Soon...</p>
+  <h3 style="margin-top: 10px;">MATCH REPORTS</h3>
+  <ul>
+    <li><a href="/u10m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
+  </ul>
 </div>
