--- a/__data/teams-u09m.html
+++ b/__data/teams-u09m.html
@@ -1,9 +1,13 @@
 <div class="col-container">
   <div class="col1">
-    <h3 style="margin-top: 10px;">CONTACTS</h3>
+    <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
-      <li><b>Head Coach: </b><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span></li>
-      <li><b>Head Coach: </b><span class="nowrap">Mark Lowe - <a href="tel:0410 503 261">0410 503 261</a></span></li>
+      <li>
+        <b>Head Coach: </b><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span>
+      </li>
+      <li>
+        <b>Head Coach: </b><span class="nowrap">Mark Lowe - <a href="tel:0410 503 261">0410 503 261</a></span>
+      </li>
       <li><b>Assistant Coach: </b><span class="nowrap">Zoran Dinev</span></li>
       <li><b>Assistant Coach: </b><span class="nowrap">Chris Welch</span></li>
       <li><b>Team Manager: </b><span class="nowrap">Sally Delbridge</span></li>
@@ -11,20 +15,26 @@
     </ul>
   </div>
   <div class="col2">
-    <div style="padding-top: 1em;">
-      <h4 style="margin-bottom: 5px;">Training Times</h4>
-      <p style="margin: 0;">Friday</p>
+    <div style="padding-top: 1em">
+      <h4 style="margin-bottom: 5px">Training Times</h4>
+      <p style="margin: 0">Friday</p>
     </div>
-    <div style="padding-top: .5em;">
-      <h4 style="margin-bottom: 5px;">Season Information</h4>
-      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616970&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a></p>
-      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616970&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a></p>
-      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616970&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a></p>
+    <div style="padding-top: 0.5em">
+      <h4 style="margin-bottom: 5px">Season Information</h4>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616970&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
+      </p>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616970&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
+      </p>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616970&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
+      </p>
     </div>
   </div>
 </div>
 <div>
-  <h3 style="margin-top: 10px;">MATCH REPORTS</h3>
+  <h3 style="margin-top: 10px">MATCH REPORTS</h3>
   <ul>
     <li><a href="/u09m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u09m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
