--- a/__data/teams-u14g-match-report.html
+++ b/__data/teams-u14g-match-report.html
@@ -1,19 +1,54 @@
 <script type="text/javascript">
-  jQuery(document).ready(function() {	
-    if (window.location.search.includes("id=r02")) jQuery("#r02").show();
-    else jQuery("#not-found").show();
-  })
+  jQuery(document).ready(function () {
+    if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
+    else jQuery('#not-found').show();
+  });
 </script>
-<div id="r02" style="display: none;">
+<div id="r02" style="display: none">
   <h3>Round 2</h3>
-<p>It wasn&rsquo;t a great day for the under 14 girls in round two. &nbsp;Playing against SBL away, we were outplayed for most of the game by a team that was competing harder at more stoppages and for longer periods in the game. &nbsp;As the match went on, it was clear that we were a younger team, missing a couple of top age girls to help balance the contest. &nbsp;A tough loss 8 &ndash; 71. &nbsp;&nbsp;</p>
-<p>Whilst we are focusing on improving our skills at training, it is our game sense and awareness of what to do and where to be that we also need to work on. &nbsp;Such simple things as rushing a behind, rather than allowing the opportunity for the other team to kick a goal, or running back in defence and staying on our opposition player. &nbsp;It&rsquo;s the little things that can make a big difference.&nbsp;</p>
-<p>A tough game played by Shaylee, intercepting many SBL forward movements. &nbsp;Lily and Grace worked hard in the ruck and Jess was lively around the stoppages being quick enough to break away in our forward line to kick our only goal in the third quarter. &nbsp;</p>
-<p>A lot more footy to be taught. &nbsp;The coaching team will work hard on teaching the skills and game knowledge to give the girls the best opportunity to improve. &nbsp;However, the correct mindset brought to each and every training session and game is up to every individual on the team. &nbsp; &nbsp;&nbsp;</p>
-<p>Thank you,</p>
-<p>Kevin Maniscalchi</p>
+  <p>
+    It wasn&rsquo;t a great day for the under 14 girls in round two. &nbsp;Playing against SBL away, we were outplayed for most of the game by a team that was
+    competing harder at more stoppages and for longer periods in the game. &nbsp;As the match went on, it was clear that we were a younger team, missing a
+    couple of top age girls to help balance the contest. &nbsp;A tough loss 8 &ndash; 71. &nbsp;&nbsp;
+  </p>
+  <p>
+    Whilst we are focusing on improving our skills at training, it is our game sense and awareness of what to do and where to be that we also need to work on.
+    &nbsp;Such simple things as rushing a behind, rather than allowing the opportunity for the other team to kick a goal, or running back in defence and staying
+    on our opposition player. &nbsp;It&rsquo;s the little things that can make a big difference.&nbsp;
+  </p>
+  <p>
+    A tough game played by Shaylee, intercepting many SBL forward movements. &nbsp;Lily and Grace worked hard in the ruck and Jess was lively around the
+    stoppages being quick enough to break away in our forward line to kick our only goal in the third quarter. &nbsp;
+  </p>
+  <p>
+    A lot more footy to be taught. &nbsp;The coaching team will work hard on teaching the skills and game knowledge to give the girls the best opportunity to
+    improve. &nbsp;However, the correct mindset brought to each and every training session and game is up to every individual on the team. &nbsp; &nbsp;&nbsp;
+  </p>
+  <p>Thank you,</p>
+  <p>Kevin Maniscalchi</p>
 </div>
-<div id="not-found" style="display: none;">
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>
+    Our first home game of the season in round 3, playing against Waverley Blues, who had also won one game and lost one. &nbsp;After a disappointing loss in
+    round two, the girls were keen to make amends. &nbsp;Raelene was our captain today and we were looking to get off to a quick start. &nbsp;However, our
+    sluggish start let us down again, as we let our opposition kick three goals in the first quarter. &nbsp;In true Anzac day spirit, we lifted and won the
+    second quarter by kicking two points.&nbsp;
+  </p>
+  <p>
+    Finding some belief, we kicked two goals in the third quarter and at the last break we were down by only 3 points. &nbsp;The two goals coming from first
+    time kickers Ruby and Shayla. &nbsp;After Waverley kicked there only other goal for the game in the last quarter, it would have been easy for our girls to
+    drop their heads. &nbsp;Instead, they pushed harder and scored as Shaylee kicked our third goal for the game.&nbsp;
+  </p>
+  <p>
+    As time run out, we were left five points down in a great effort on such a special day. &nbsp;More commitment to each other, playing harder, increased
+    tackling and pressure were all reasons for putting up a great contest. &nbsp;Some excellent efforts from Jade, Shayla, Raelene and Grace today, with another
+    outstanding game from Shaylee, being presented with the Anzac day medal for her courage and competitiveness.&nbsp;
+  </p>
+  <p>Final scores: Bayswater 23 &ndash; Waverley Blues 28</p>
+</div>
+<div id="not-found" style="display: none">
   <h3>Not Found</h3>
-<p>Sorry, we couldn't find a matching match report.</p>
+  <p>Sorry, we couldn't find a matching match report.</p>
 </div>
