--- a/__data/teams-u18g.html
+++ b/__data/teams-u18g.html
@@ -1,23 +1,28 @@
 <div class="col-container">
   <div class="col1">
-    <h3 style="margin-top: 10px;">CONTACTS</h3>
-    <ul>
-    </ul>
+    <h3 style="margin-top: 10px">CONTACTS</h3>
+    <ul></ul>
   </div>
   <div class="col2">
-    <div style="padding-top: 1em;">
-      <h4 style="margin-bottom: 5px;">Training Times</h4>
-      <p style="margin: 0;">TBD</p>
+    <div style="padding-top: 1em">
+      <h4 style="margin-bottom: 5px">Training Times</h4>
+      <p style="margin: 0">TBD</p>
     </div>
-    <div style="padding-top: .5em;">
-      <h4 style="margin-bottom: 5px;">Season Information</h4>
-      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616988&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a></p>
-      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616988&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a></p>
-      <p style="margin: 0;"><a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616988&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a></p>
+    <div style="padding-top: 0.5em">
+      <h4 style="margin-bottom: 5px">Season Information</h4>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616988&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
+      </p>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616988&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
+      </p>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616988&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
+      </p>
     </div>
   </div>
 </div>
 <div>
-  <h3 style="margin-top: 10px;">MATCH REPORTS</h3>
+  <h3 style="margin-top: 10px">MATCH REPORTS</h3>
   <p>Coming Soon...</p>
 </div>
