--- a/__data.2023.05.03/teams-u08m.html
+++ b/__data.2023.05.03/teams-u08m.html
@@ -14,7 +14,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Friday 5:00pm - 6:00pm</p>
+      <p style="margin: 0">Friday</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
@@ -35,7 +35,5 @@
   <ul>
     <li><a href="/u08m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u08m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
-    <li><a href="/u08m-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
-    <li><a href="/u08m-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
   </ul>
 </div>
