--- a/__data.2023.05.03/teams-u14b.html
+++ b/__data.2023.05.03/teams-u14b.html
@@ -11,7 +11,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Monday 5:30pm - 6:30pm, Wednesday 5:30pm - 6:30pm</p>
+      <p style="margin: 0">Monday 5:30pm - 6:30pm Wednesday 5:30pm - 6:30pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
@@ -33,6 +33,5 @@
     <li><a href="/u14b-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u14b-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
     <li><a href="/u14b-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
-    <li><a href="/u14b-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
   </ul>
 </div>
