--- a/__data.2023.05.03/teams-u17gold.html
+++ b/__data.2023.05.03/teams-u17gold.html
@@ -13,16 +13,18 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Tuesday 5:30pm - 6:30pm, Thursday 5:30pm - 7:00pm</p>
+      <p style="margin: 0">Tuesday 5:30pm - 6:30pm Thursday 5:30pm - 6:30pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0"><a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-616973-0&a=FIXTURE" rel="noopener" target="_blank">Fixture</a></p>
       <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-616973-0&pool=1&round=0&a=ROUND" rel="noopener" target="_blank">Results</a>
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=622793&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
       </p>
       <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-616973-0&pool=1&a=LADDER" rel="noopener" target="_blank">Ladder</a>
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=622793&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
+      </p>
+      <p style="margin: 0">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=622793&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
       </p>
     </div>
   </div>
