--- a/__data.2023.05.03/teams-u09m.html
+++ b/__data.2023.05.03/teams-u09m.html
@@ -17,7 +17,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Friday 6:00pm - 7:00pm</p>
+      <p style="margin: 0">Friday</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
