--- a/__data.2023.05.03/teams-u11m.html
+++ b/__data.2023.05.03/teams-u11m.html
@@ -13,7 +13,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Wednesday 5:30pm - 6:30pm</p>
+      <p style="margin: 0">Wednesday</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
