--- a/__data.2023.05.03/teams.html
+++ b/__data.2023.05.03/teams.html
@@ -105,26 +105,28 @@
       <td class="column-5"><a href="2023-u16g-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-9 odd">
-      <td class="column-1"><h4>Under 16 Boys Gold</h4></td>
-      <td class="column-2"><a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-616973-0&a=FIXTURE" rel="noopener" target="_blank">Fixture</a></td>
-      <td class="column-2">
-        <a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-616973-0&pool=1&round=0&a=ROUND" rel="noopener" target="_blank">Results</a>
-      </td>
-      <td class="column-2">
-        <a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-616973-0&pool=1&a=LADDER" rel="noopener" target="_blank">Ladder</a>
-      </td>
-      <td class="column-5"><a href="2023-u16gold-team" target="_self" class="btn small-btn">Team Page</a></td>
-    </tr>
-    <tr class="row-10 even">
-      <td class="column-1"><h4>Under 17 Boys Green</h4></td>
+      <td class="column-1"><h4>Under 17 Boys Gold</h4></td>
       <td class="column-2">
         <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=622793&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
       </td>
       <td class="column-2">
-        <a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-622793-0&pool=1&round=0&a=ROUND" rel="noopener" target="_blank">Results</a>
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=622793&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
       </td>
       <td class="column-2">
-        <a href="https://websites.mygameday.app/comp_info.cgi?c=0-722-0-622793-0&pool=1&a=LADDER" rel="noopener" target="_blank">Ladder</a>
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=622793&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
+      </td>
+      <td class="column-5"><a href="2023-u17gold-team" target="_self" class="btn small-btn">Team Page</a></td>
+    </tr>
+    <tr class="row-10 even">
+      <td class="column-1"><h4>Under 17 Boys Green</h4></td>
+      <td class="column-2">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616983&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
+      </td>
+      <td class="column-2">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616983&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
+      </td>
+      <td class="column-2">
+        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616983&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
       </td>
       <td class="column-5"><a href="2023-u17green-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
