--- a/__data/teams-u16g.html
+++ b/__data/teams-u16g.html
@@ -1,49 +1,27 @@
 <div class="col-container">
   <div class="col1">
-    <h3 style="margin-top: 10px">CONTACTS</h3>
+    <h3 style="margin-top: 10px;">CONTACTS</h3>
     <ul>
-      <li><b>Head Coach: </b><span class="nowrap">Michael Hughson</span></li>
-      <li>
-        <b>Assistant Coach: </b><span class="nowrap">Mark Hindson - <a href="tel:0419 149 500">0419 149 500</a></span>
-      </li>
-      <li><b>Team Manager: </b><span class="nowrap">Paul Halse</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Chris Aveling</span></li>
+      <li><b>Head Coach: </b><span class="nowrap">Michael Hughson - <a href="tel:0401 995 003">0401 995 003</a></span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">TBD</span></li>
+      <li><b>Team Manager: </b><span class="nowrap">TBD</span></li>
+      <li><b>Trainer: </b><span class="nowrap">TBD</span></li>
     </ul>
   </div>
   <div class="col2">
-    <div style="padding-top: 1em">
-      <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Thursday 6:00pm - 7:30pm</p>
+    <div style="padding-top: 1em;">
+      <h4 style="margin-bottom: 5px;">Training Times</h4>
+      <p style="margin: 0;">Thursday 6:00pm - 7:30pm</p>
     </div>
-    <div style="padding-top: 0.5em">
-      <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=FIXTURE&compID=616956&c=1-722-0-481763-0" rel="noopener" target="_blank">Fixture</a>
-      </p>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=ROUND&compID=616956&c=1-722-0-481763-0" rel="noopener" target="_blank">Results</a>
-      </p>
-      <p style="margin: 0">
-        <a href="https://websites.mygameday.app/comp_info.cgi?a=LADDER&compID=616956&c=1-722-0-481763-0" rel="noopener" target="_blank">Ladder</a>
-      </p>
+    <div style="padding-top: .5em;">
+      <h4 style="margin-bottom: 5px;">Season Information</h4>
+      <p style="margin: 0;"><a href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u16-girls/5bf379ce" rel="noopener" target="_blank">Fixture</a></p>
+      <p style="margin: 0;"><a href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u16-girls/5bf379ce/ladder" rel="noopener" target="_blank">Results</a></p>
+      <p style="margin: 0;"><a href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/deakin-uni-u16-girls/509472e5" rel="noopener" target="_blank">Ladder</a></p>
     </div>
   </div>
 </div>
 <div>
-  <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul>
-    <li><a href="/u16g-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r05" rel="nofollow">Round 5 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r10" rel="nofollow">Round 10 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r11" rel="nofollow">Round 11 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r12" rel="nofollow">Round 12 Match Report</a></li>
-    <li><a href="/u16g-match-report/?id=r13" rel="nofollow">Round 13 Match Report</a></li>
-  </ul>
+  <h3 style="margin-top: 10px;">MATCH REPORTS</h3>
+  <p>Coming Soon...</p>
 </div>
