--- a/__data/teams-u16g.html
+++ b/__data/teams-u16g.html
@@ -11,7 +11,7 @@
   <div class="col2">
     <div style="padding-top: 1em;">
       <h4 style="margin-bottom: 5px;">Training Times</h4>
-      <p style="margin: 0;">Thursday 6:00pm - 7:30pm</p>
+      <p style="margin: 0;">TBD</p>
     </div>
     <div style="padding-top: .5em;">
       <h4 style="margin-bottom: 5px;">Season Information</h4>
