--- a/teams-u10m.html
+++ b/teams-u10m.html
@@ -1,29 +1,52 @@
 <div class="col-container">
   <div class="col1">
-    <h3 style="margin-top: 10px;">CONTACTS</h3>
+    <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
-      <li><b>Team Manager: </b><span class="nowrap">Sally Delbridge - <a href="tel:0484 791 015">0484 791 015</a></span></li>
-      <li><b>Head Coach: </b><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span></li>
+      <li>
+        <b>Team Manager: </b><span class="nowrap">Sally Delbridge - <a href="tel:0484 791 015">0484 791 015</a></span>
+      </li>
+      <li>
+        <b>Head Coach: </b><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span>
+      </li>
       <li><b>Assistant Coach: </b><span class="nowrap">Chris Welch</span></li>
       <li><b>Trainer: </b><span class="nowrap">TBD</span></li>
     </ul>
   </div>
   <div class="col2">
-    <div style="padding-top: 1em;">
-      <h4 style="margin-bottom: 5px;">Training Times</h4>
-      <p style="margin: 0;">Friday 6:00pm - 7:00pm</p>
+    <div style="padding-top: 1em">
+      <h4 style="margin-bottom: 5px">Training Times</h4>
+      <p style="margin: 0">TBD</p>
     </div>
-    <div style="padding-top: .5em;">
-      <h4 style="margin-bottom: 5px;">Season Information</h4>
-      <p style="margin: 0;"><a href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u10/66f37103" rel="noopener" target="_blank">Fixture</a></p>
-      <p style="margin: 0;"><a href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u10-red/6bc6370d" rel="noopener" target="_blank">Results</a></p>
-      <p style="margin: 0;"><a href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u10/66f37103/ladder" rel="noopener" target="_blank">Ladder</a></p>
+    <div style="padding-top: 0.5em">
+      <h4 style="margin-bottom: 5px">Season Information</h4>
+      <p style="margin: 0">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u10/66f37103"
+          rel="noopener"
+          target="_blank"
+          >Fixture</a
+        >
+      </p>
+      <p style="margin: 0">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u10-red/6bc6370d"
+          rel="noopener"
+          target="_blank"
+          >Results</a
+        >
+      </p>
+      <p style="margin: 0">
+        <a
+          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u10/66f37103/ladder"
+          rel="noopener"
+          target="_blank"
+          >Ladder</a
+        >
+      </p>
     </div>
   </div>
 </div>
 <div>
-  <h3 style="margin-top: 10px;">MATCH REPORTS</h3>
-  <ul>
-    <li><a href="/u10m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
-  </ul>
+  <h3 style="margin-top: 10px">MATCH REPORTS</h3>
+  <p>Coming Soon...</p>
 </div>
